--- a/css/_colors.scss
+++ b/css/_colors.scss
@@ -3,7 +3,7 @@ $lavender-blue: #d1d2f9ff;
 $baby-blue-eyes: #a3bcf9ff;
 $blue-gray: #7796cbff;
 $dark-blue-gray: #576490ff;
-
+$darker-blue-gray: rgb(18, 34, 89);
 $border: 2px solid $dark-blue-gray;
 
 $testo1: "Azeret Mono", monospace;
